fix padding on mobile landscape vire

--- a/grunt/cssSource/_mobileLandscape.scss
+++ b/grunt/cssSource/_mobileLandscape.scss
@@ -7,8 +7,7 @@
   // For the main element
   .page-content {
     max-width: $mobile-landscape-width;
-    padding: 0;
-    // padding: 15px 15px 58px;
+    padding: 15px 15px 58px;
   }
 
   .breadcrumb-styles {
