--- a/grunt/cssSource/styles.css
+++ b/grunt/cssSource/styles.css
@@ -3900,7 +3900,7 @@ a.pagination-link {
 @media only screen and (min-width: 321px) and (max-width: 568px) {
   .page-content {
     max-width: 548px;
-    padding: 0;
+    padding: 15px 15px 58px;
   }
 
   .breadcrumb-styles {
